# AutoBridge

./: CMakeLists.txt  LICENSE  README.md  README_zh-TW.md  build.bat  build.ps1
include/: log.h  module_helper.h
src/: main.cpp  module_helper.cpp
template/: customize.sh  module.prop  ndk-apps.txt  service.sh  system.prop  uninstall.sh
